--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1163,6 +1163,38 @@ section
 {
 	width: 100%;
 }
+.course_button_add_res
+{
+	position: relative;
+	width: 224px;
+	height: 20px;
+	border: none;
+	outline: none;
+	cursor: pointer;
+        color: #f50202;
+        background-color: #ffffff;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.course_button_add
+{
+	position: relative;
+	width: 224px;
+	height: 50px;
+	border: none;
+	outline: none;
+	cursor: pointer;
+        color: #f50202;
+        background-color: #ffffff;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
 .course_button
 {
 	position: relative;
@@ -1676,7 +1708,21 @@ section
 }
 .news_post_date
 {
-	font-size: 12px;
+	font-size: 14px;
+	font-weight: 800;
+	color: #000;
+	line-height: 0.75;
+}
+.news_post_date_res
+{
+	font-size: 16px;
+	font-weight: 800;
+	color: #000;
+	line-height: 0.75;
+}
+.news_post_title_user
+{
+	font-size: 16px;
 	font-weight: 600;
 	color: #f50202;
 	line-height: 0.75;
@@ -1933,7 +1979,7 @@ section
     width: 100%;
     background: #FFFFFF;
     margin-top: 40px;
-    padding-top: 88px;
+    padding-top: 70px;
     padding-bottom: 19px;
 }
 
