--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1145,7 +1145,12 @@ section
 /*********************************
 7. Courses
 *********************************/
-
+.coursesChat{
+    	width: 100%;
+	background: #FFFFFF;
+	padding-top: 105px;
+	padding-bottom: 60px;
+}
 .courses
 {
 	width: 100%;
@@ -2170,4 +2175,103 @@ section
 {
 	width: 100%;
 	height: calc(100% + 30px);
+}
+
+/**************
+
+chat
+
+****************/
+.chatBody .logo_content{
+    align-items: center !important;
+}
+.chat_user .chat-img{
+    margin-right: 10px;
+}
+.footer_chat{
+    padding: 0px;
+}
+.panel-footer{
+        padding: 10px 15px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+.chat_user{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll;    
+}
+.chat
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll;
+    height: 300px;
+}
+
+.chat li
+{
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+}
+
+.chat li.left .chat-body
+{
+    margin-left: 70px;
+}
+
+.chat li.right .chat-body
+{
+    margin-right: 70px;
+}
+
+
+.chat li .chat-body p
+{
+    margin: 0;
+    color: #777777;
+}
+.chat-body .user{
+    margin-top: 10px;
+}
+.panel .slidedown .glyphicon, .chat .glyphicon
+{
+    margin-right: 5px;
+}
+
+.panel-body
+{
+    overflow-y: scroll;
+    height: 250px;
+}
+
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
+.left{
+    list-style: none;
+    margin-top: 10px;
+}
+.right{    
+    list-style: none;
+    margin-top: 10px;
 }
