--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1954,6 +1954,13 @@ section
     padding: 10px;
     background-color: white;    
 }
+.card-box1 {
+	padding-top: 20px;
+}
+.card-box2 {
+	padding-top: 20px;
+	padding-left: 90px ;
+}
 .footerPanel{    
     margin: 15px;
     margin-left: 25px;
