--- a/styles/admin.css
+++ b/styles/admin.css
@@ -480,7 +480,7 @@ section
 .logo_text
 {
 	font-family: 'Montserrat', serif;
-	font-size: 18px;
+	font-size: 25px;
 	font-weight: 700;
 	line-height: 0.75;
 	margin-left: 1px;
@@ -1457,8 +1457,8 @@ section
 .milestones
 {
 	width: 100%;
-	padding-top: 156px;
-	padding-bottom: 161px;
+	padding-top: 86px;
+	padding-bottom: 81px;
 }
 .milestones_container
 {
@@ -1502,8 +1502,8 @@ section
 .grouped_sections
 {
 	width: 100%;
-	background: #FFFFFF;
-	padding-top: 89px;
+	background: #f2f1f8;
+	padding-top: 50px;
 	padding-bottom: 100px;
 }
 .grouped_title
