--- a/styles/admin.css
+++ b/styles/admin.css
@@ -2249,7 +2249,15 @@ chat
     overflow-y: scroll;
     height: 250px;
 }
-
+.notRead{
+    color: #e5e8ea!important;
+    text-align: center;
+    background-color: #868e96!important;
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    font-size: large;
+}
 ::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
