casi asinga tareas

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -2038,3 +2038,9 @@ loading
 	float: right;
 	 background:red;
 }
+
+.asignar{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 5px;
+}
