asigna profesres casi listo...falta eliminar y con ellos todas las relaciones

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -2044,3 +2044,11 @@ loading
     margin-bottom: 30px;
     padding: 5px;
 }
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: red;
+}
+.nav-item a{
+    color: black;
+}
