modales / responsive / maestro, admin CRUD

--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1632,7 +1632,7 @@ section
 	right: 12px;
 	width: 23px;
 	height: 23px;
-	background: #f50202;
+	background: #ff8a00;
 	content: '+';
 	font-size: 16px;
 	color: #FFFFFF;
