--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -2009,6 +2009,7 @@ loading
     margin: 15px;
     padding: 10px;
     background-color: white;    
+    width:100%;
 }
 .card-box1 {
 	padding-top: 20px;
