--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -2112,3 +2112,22 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+.error .error_title {
+  font-size: 100px;
+  color: #ffffff;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
+  text-align: center;
+  line-height: 1em;
+  margin: 0;
+  padding: 60px 0;
+}
+.error .error_subtitle {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.content_wrap.fullwidth:before {
+  background-color: transparent !important;
+}
+.middle_inner {
+  background-color: #ffffff;
+}
